config/helm/ciliumnetworkpolicy_capi-kubeadm-control-plane-controller-manager.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: control-plane-kubeadm
    app.kubernetes.io/name: cluster-api
    cluster.x-k8s.io/provider: control-plane-kubeadm
    control-plane: controller-manager
    helm.sh/chart: cluster-api
  name: capi-kubeadm-control-plane-controller-manager
spec:
  endpointSelector:
    matchLabels:
      cluster.x-k8s.io/provider: control-plane-kubeadm
      control-plane: controller-manager
  egress:
    - toEntities:
        - kube-apiserver
